# led-gemini

./: .gitignore  Cargo.toml  DEVLOG.md  MANUAL.md  Makefile  README.md  app_specs.md  app_todo.md  config.toml.default
.github/workflows/: release-windows.yml
assets/icons/: led.icns
assets/icons/extracted/: README.txt
assets/syntax/: css.toml  go.toml  html.toml  javascript.toml  markdown.toml  plain-text.toml  python.toml  rust.toml  swift.toml  toml.toml  xml.toml
assets/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  light.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
crates/led-core/: Cargo.toml
crates/led-core/src/: buffer.rs  config.rs  i18n.rs  lib.rs  search.rs  syntax.rs  theme.rs
crates/led-gui/: Cargo.toml
crates/led-gui/src/: app.rs  main.rs  window_view.rs  workspace.rs
crates/led-gui/src/widgets/: dialog.rs  editor_view.rs  find_panel.rs  menu_bar.rs  mod.rs  status_bar.rs  tab_bar.rs
crates/led-tui/: Cargo.toml
crates/led-tui/src/: app.rs  clipboard.rs  layout.rs  main.rs  renderer.rs
crates/led-tui/src/widgets/: dialog.rs  find_panel.rs  menu.rs  mod.rs
dummy_bin/: metal  metallib  xcrun
