[workspace]
members = ["crates/led-core", "crates/led-tui", "crates/led-gui"]
resolver = "2"

[workspace.dependencies]
anyhow        = { version = "1.0", features = ["backtrace"] }
serde         = { version = "1.0", features = ["derive"] }
toml-span     = "0.6"
regex         = "1.12"
aho-corasick  = "1.1"
unicode-width = "0.2"
encoding_rs   = "0.8"
ropey         = "1.6"
rayon         = "1.11"
chrono        = "0.4"
humantime     = "2.1"
