[package]
name = "led-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "led-gui"
path = "src/main.rs"

[dependencies]
led-core = { path = "../led-core" }
gpui          = { git = "https://github.com/zed-industries/zed", rev = "6766514599c6f8ce6530ccc685db5e0d68c44f32" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "6766514599c6f8ce6530ccc685db5e0d68c44f32" }
anyhow   = { workspace = true }
serde    = { workspace = true }
